@@ -1,0 +1,24 @@
+using System;
+
+#region CVS Information
+/*
+ * $Source$
+ * $Author$
+ * $Date$
+ * $Revision$
+ */
+#endregion
+
+namespace DNPreBuild.Core.Util
+{
+	public class Preprocessor
+	{
+        #region Constructors
+
+		public Preprocessor()
+		{
+		}
+
+        #endregion
+	}
+}
